# lets-finish

./: .travis.yml  CMakeLists.txt  README.md  compile.sh  run.bat  run.sh
.github/workflows/: cmake.yml  codeql-analysis.yml
data/: default-chance.txt  default-map.txt  default-player.txt
src/: letsfinish.c
src/board/: board.c  board.h  mboard.c  mboard.sh
src/chance/: chance.c  chance.h  mchance.c  mchance.sh
src/command/: command.c  command.h  mcommand.c  mcommand.sh
src/game/: game.c  game.h  mgame.c  mgame.sh
src/global/: global.h
src/mesinkata/: mesinkarakter.c  mesinkarakter.h  mesinkata.c  mesinkata.h  mmesinkata.c  mmesinkata.sh
src/player/: mplayer.c  mplayer.sh  player.c  player.h
